[package]
name = "hailwifi"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
#cortexm4 = { git = "https://github.com/tock/tock", branch = "uart-receive-terminator" }
#capsules = { git = "https://github.com/tock/tock", branch = "uart-receive-terminator" }
#kernel = { git = "https://github.com/tock/tock", branch = "uart-receive-terminator" }
#sam4l = { git = "https://github.com/tock/tock", branch = "uart-receive-terminator" }
cortexm4 = { path = "../../../../../tock/arch/cortex-m4" }
capsules = { path = "../../../../../tock/capsules" }
kernel = { path = "../../../../../tock/kernel" }
sam4l = { path = "../../../../../tock/chips/sam4l" }
